--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     , "mysql": "latest"
     , "sequelize": "latest"
     , "lodash": "latest"
-    , "mathjs": "latest"
+    , "mathjs": "0.19.0"
   },
   "devDependencies": {
     "mocha": "latest"
