--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     , "async": "latest"
     , "request": "latest"
     , "mysql": "latest"
-    , "sequelize": "latest"
+    , "sequelize": "1.7.1"
     , "lodash": "latest"
     , "mathjs": "0.19.0"
   },
