--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "test": "make test"
   },
   "dependencies": {
-    "restify": "latest"
+    "restify": "2.7.0"
     , "coffee-script": "latest"
-    , "underscore": "latest"
-    , "underscore.string": "latest"
-    , "date-utils": "latest"
-    , "winston": "latest"
-    , "async": "latest"
-    , "request": "latest"
-    , "mysql": "latest"
+    , "underscore": "1.6.0"
+    , "underscore.string": "2.3.3"
+    , "date-utils": "1.2.15"
+    , "winston": "0.7.3"
+    , "async": "0.8.0"
+    , "request": "2.34.0"
+    , "mysql": "2.2.0"
     , "sequelize": "1.7.1"
-    , "lodash": "latest"
+    , "lodash": "2.4.1"
     , "mathjs": "0.19.0"
   },
   "devDependencies": {
