--- a/config.json.sample
+++ b/config.json.sample
@@ -8,6 +8,14 @@
       "host": "localhost",
       "logging": true
     },
+    "queue": {
+      "db": "coinnext_queue_dev",
+      "user": "root",
+      "password": "",
+      "port": 3306,
+      "host": "localhost",
+      "logging": true
+    },
     "salt": "coinnextenginesecret#1999",
     "engine_host": "localhost:7000",
     "trade_api_host": "http://localhost:6000"
@@ -21,6 +29,14 @@
       "host": "localhost",
       "logging": true
     },
+    "queue": {
+      "db": "coinnext_queue_test",
+      "user": "root",
+      "password": "",
+      "port": 3306,
+      "host": "localhost",
+      "logging": true
+    },
     "salt": "coinnextenginesecret#1999",
     "engine_host": "localhost:7000",
     "trade_api_host": "http://localhost:6000"
@@ -28,6 +44,14 @@
   "production" : {
     "mysql": {
       "db": "coinnext_engine_production",
+      "user": "root",
+      "password": "",
+      "port": 3306,
+      "host": "localhost",
+      "logging": true
+    },
+    "queue": {
+      "db": "coinnext_queue_production",
       "user": "root",
       "password": "",
       "port": 3306,
